# vision_projects

catkin_ws/devel/: _setup_util.py  setup.sh
vision_projects/: movement.py  opt_flow.py  opt_flow.py~
vision_projects/BoF-SIFT/: BoF-SIFT  BoF-SIFT.cpp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  bof-svm  bof-svm.cpp  cmake_install.cmake
vision_projects/ColorDetection/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  ColorDetection  ColorDetection.cpp  ColorDetection2  ColorDetection2.cpp  ColorDetection3  ColorDetection3.cpp  Makefile  cmake_install.cmake
vision_projects/Contours/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Contours  Contours.cpp  Contours2  Contours2.cpp  Makefile  cmake_install.cmake  generalContours_demo1
vision_projects/DisplayImage/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake
vision_projects/Display_Image/: CMakeCache.txt  CMakeLists.txt~  Display_Image  Display_Image.cpp  Makefile  cmake_install.cmake
vision_projects/Drawing_1/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Drawing_1  Drawing_1.cpp  Drawing_2  Drawing_3  Drawing_3.cpp  Drawing_4  Drawing_4.cpp  Makefile  cmake_install.cmake
vision_projects/FaceDetection/: CMakeCache.txt  CMakeLists.txt~  FaceDetection  FaceDetection.pro  FaceDetection.pro~  Makefile  cmainwindow.cpp  cmainwindow.h  cmainwindow.ui  cmainwindow.ui.autosave  cmake_install.cmake  cqtopencvviewergl.cpp  cqtopencvviewergl.h  moc_cmainwindow.cpp  moc_cqtopencvviewergl.cpp  ui_cmainwindow.h
vision_projects/Face_Eye_Detection/: CMakeCache.txt  CMakeLists.txt  Face_Eye_Detection  Face_Eye_Detection.cpp  Makefile  cmake_install.cmake
vision_projects/FeatureDetection/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  FeatureDetection  FeatureDetection.cpp  Makefile  cmake_install.cmake
vision_projects/GUI/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gui.cpp
vision_projects/SURF_Descriptor/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  SURF_Descriptor  cmake_install.cmake
vision_projects/SURF_FlannMatcher/: CMakeCache.txt  Makefile  SURF_FlannMatcher  cmake_install.cmake
vision_projects/Segmentation-Annotation/: CMakeCache.txt  CMakeLists.txt~  Makefile  bag_to_images.py  cmake_install.cmake  grabcut  grabcut2  grabcut2.cpp
vision_projects/Sobel/: CMakeCache.txt  CMakeLists.txt~  Makefile  Sobel  (+2 more)
vision_projects/annotator/: .annotator.cpp.swp  .annotator.h.swp  CMakeCache.txt  CMakeLists.txt  Makefile  aa  aa.cpp  annotations.txt  annotator  annotator.cpp  annotator2.cpp  annotator2.h  cmake_install.cmake  image_sequence  imagelist.xml  main.cpp  s  xx  xx.cpp
vision_projects/annotator2/: CMakeCache.txt  CMakeLists.txt  Makefile  annotations.txt  annotator  annotator.cpp  annotator.h  cmake_install.cmake
vision_projects/capture2/: CMakeCache.txt  CMakeLists.txt  Makefile  capture2  capture2.cpp  capture4  capture4.cpp  capture5  capture5.cpp  cmake_install.cmake  img_cropping  img_cropping.cpp  img_resize  img_resize.cpp  kostis  kostis.cpp
vision_projects/people detect/: .peopledetect.cpp.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  peopledetectfromvideo  peopledetectfromvideo.cpp  persons.txt
vision_projects/sobelcanny/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  canny  canny.cpp  capture.cpp  cmake_install.cmake  edge  sobelcanny  sobelcanny.cpp
(+46 files in other folders)
