cmake_minimum_required(VERSION 2.8)
project( ColorDetection )
find_package( OpenCV REQUIRED )
add_executable( ColorDetection ColorDetection.cpp )
add_executable( ColorDetection2 ColorDetection2.cpp )
add_executable( ColorDetection3 ColorDetection3.cpp )
target_link_libraries( ColorDetection ${OpenCV_LIBS})
target_link_libraries( ColorDetection2 ${OpenCV_LIBS}) 
target_link_libraries( ColorDetection3 ${OpenCV_LIBS})
