cmake_minimum_required(VERSION 2.8)
project( Contours )
find_package( OpenCV REQUIRED )
add_executable( Contours Contours.cpp )
add_executable( Contours2 Contours2.cpp )
add_executable(generalContours_demo1 generalContours_demo1.cpp)
target_link_libraries( Contours ${OpenCV_LIBS} )
target_link_libraries( Contours2 ${OpenCV_LIBS} )
target_link_libraries( generalContours_demo1 ${OpenCV_LIBS})
