cmake_minimum_required(VERSION 2.8)
project(annotator)
find_package( OpenCV REQUIRED )
find_package( Boost REQUIRED COMPONENTS filesystem )
include_directories( ${Boost_INCLUDE_DIRS} )
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(annotator annotator.cpp )
target_link_libraries(annotator ${OpenCV_LIBS} ${Boost_LIBRARIES} )
