cmake_minimum_required(VERSION 2.8)
project( capture2 )
find_package( OpenCV REQUIRED )
add_executable( capture2 capture2.cpp )
add_executable( kostis kostis.cpp )
add_executable( capture4 capture4.cpp )
add_executable( capture5 capture5.cpp )
add_executable( img_resize img_resize.cpp )
add_executable( img_cropping img_cropping.cpp )
target_link_libraries( capture2 ${OpenCV_LIBS} )
target_link_libraries( kostis ${OpenCV_LIBS} )
target_link_libraries( capture4 ${OpenCV_LIBS} )
target_link_libraries( capture5 ${OpenCV_LIBS} )
target_link_libraries( img_resize ${OpenCV_LIBS} )
target_link_libraries( img_cropping ${OpenCV_LIBS} )
