cmake_minimum_required(VERSION 2.8)
project( Face_Eye_Detection )
find_package( OpenCV REQUIRED )
add_executable( peopledetect peopledetect.cpp )
target_link_libraries( peopledetect ${OpenCV_LIBS} )
add_executable(peopledetectfromvideo peopledetectfromvideo.cpp)
target_link_libraries( peopledetectfromvideo ${OpenCV_LIBS} )
