cmake_minimum_required(VERSION 2.8)
project( sobelcanny )
set(OpenCV_DIR "/usr/lib/opencv")
find_package( OpenCV REQUIRED )
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable( sobelcanny sobelcanny.cpp )
add_executable( canny canny.cpp )
add_executable( edge edge.cpp )
target_link_libraries( sobelcanny ${OpenCV_LIBS} )
target_link_libraries(canny ${OpenCV_LIBS} )
target_link_libraries(edge ${OpenCV_LIBS} )
